Fix z-index issue

--- a/demo/peacock/src/components/cart/cart.css
+++ b/demo/peacock/src/components/cart/cart.css
@@ -5,7 +5,7 @@
 
 .cart-box {
   position: fixed;
-  z-index: 10;
+  z-index: 3;
   top: 0;
   right: 0;
   height: 100%;
