--- a/demo/peacock/src/components/header/header.css
+++ b/demo/peacock/src/components/header/header.css
@@ -4,7 +4,7 @@
 .header-base {
   position: fixed;
   top: 0;
-  z-index: 10;
+  z-index: 2;
   width: 100%;
   height: 50px;
   font-size: 16px;
