--- a/demo/peacock/src/components/sidebar/sidebar.css
+++ b/demo/peacock/src/components/sidebar/sidebar.css
@@ -11,6 +11,7 @@
   transition: transform .2s;
   lost-column: 4/12;
   overflow-y: auto;
+  z-index: 4;
 }
 
 .sidebar-shown .container {
