--- a/demo/peacock/src/ui/overlay/overlay.css
+++ b/demo/peacock/src/ui/overlay/overlay.css
@@ -2,7 +2,7 @@
 
 .overlay {
   position: fixed;
-  z-index: 10;
+  z-index: 3;
   top: 0;
   left: 0;
   bottom: 0;
